--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,11 @@ dependencies:
   lottie: ^3.3.2
   permission_handler: ^12.0.1
   shared_preferences: ^2.5.3
+  json_annotation: ^4.9.0
   json_serializable: ^6.11.3
   flutter_native_splash: ^2.4.7
   path_provider: ^2.1.5
+  timeago: ^3.7.0
 
 dev_dependencies:
   flutter_test:
